no purple here, gray yes

--- a/www/index.html
+++ b/www/index.html
@@ -13,12 +13,12 @@
 </head>
 
 <body>
-  <div class="content purple">
+  <div class="content grey-600">
     <div class="padding white header-players">
-      <button class="icon ion-plus purple circle right"></button>
-      <button class="purple circle">F</button>
-      <button class="border-purple text-purple circle">J</button>
-      <button class="border-purple text-purple circle">M</button>
+      <button class="icon ion-plus grey-600 circle right"></button>
+      <button class="grey-600 circle">F</button>
+      <button class="border-grey-600 text-grey-600 circle">J</button>
+      <button class="border-grey-600 text-grey-600 circle">M</button>
     </div>
     <div class="padding">
       <div class="arrow-up"></div>
