--- a/www/index.html
+++ b/www/index.html
@@ -13,14 +13,32 @@
 </head>
 
 <body>
-  <div class="content grey-600">
+  <div class="content purple-500" id="no-player-content">
+    <div class="row vertical-align-center align-center">
+      <div class="col">
+        <h3 class="font-titan">
+          <span class="text-yellow-300">P</span><span class="text-green-300">e</span><span class="text-blue-300">g</span><span class="text-red-300">a</span>
+          <br>
+          <span class="text-yellow-300">V</span><span class="text-green-300">a</span><span class="text-blue-300">r</span><span class="text-red-300">e</span><span class="text-yellow-300">t</span><span class="text-green-300">a</span><span class="text-blue-300">s</span><span class="text-red-300">!</span>
+        </h3>
+        <br><br>
+        <button class="icon-text icon-right green radius font-share big" onclick="addPlayer()">
+          <i class="icon ion-happy"></i>
+          Começar agora
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <div class="content grey-600" id="player-content">
     <div class="padding white header-players">
       <button class="icon ion-plus text-grey-600 right"></button>
-      <button class="border-grey-600 text-grey-600 circle $$getPlayerClass{active}" onclick="loadPlayer($$index)" data='players' id='player-$$index'>$$getPlayerFirstLetter{name}</button>
+      <button class="border-grey-600 text-grey-600 circle $$getPlayerClass{active}" onclick="loadPlayer($$index)" data='players'
+        id='player-$$index'>$$getPlayerFirstLetter{name}</button>
     </div>
     <div class="padding">
       <div class="arrow-up" id="arrow-active-player"></div>
-      <div class="padding align-center-">
+      <div class="padding">
         <button class="icon ion-edit text-white edit-player"></button>
         <h3 class="font-titan" id="player-total-points">0 pontos</h3>
         <p class="font-share" id="player-name">Jogador</p>
