--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div class="content purple-500" id="no-player-content">
+  <div class="content black-opacity-90" id="no-player-content">
     <div class="row vertical-align-center align-center">
       <div class="col">
         <h3 class="font-titan">
