--- a/www/index.html
+++ b/www/index.html
@@ -32,7 +32,7 @@
 
   <div class="content grey-600" id="player-content">
     <div class="padding white header-players">
-      <button class="icon ion-plus text-grey-600 right"></button>
+      <button class="icon ion-plus text-grey-600 right" id="button-add-player"></button>
       <button class="border-grey-600 text-grey-600 circle $$getPlayerClass{active}" onclick="loadPlayer($$index)" data='players'
         id='player-$$index'>$$getPlayerFirstLetter{name}</button>
     </div>
