--- a/www/index.html
+++ b/www/index.html
@@ -100,6 +100,9 @@
       <div class="item align-center">
         <button class="small text-red" onclick="removeAllPlayers()">Excluir todos os jogadores</button>
       </div>
+      <div class="item align-center">
+        <button class="text-green-600" onclick="openPage('views/rules')">Regras</button>
+      </div>
     </div>
   </div>
 
