--- a/www/index.html
+++ b/www/index.html
@@ -75,7 +75,7 @@
 
   <div class="menu menu-right white" id="menu">
     <div class="list no-border">
-      <div class="item black">
+      <div class="item black-opacity-90">
         <h1 class="text-white font-titan">
           <span class="text-yellow-300">P</span>
           <span class="text-green-300">e</span>
