feat: screen to add many players for first access

--- a/www/index.html
+++ b/www/index.html
@@ -46,7 +46,7 @@
         </button>
 
         <br>
-        <button class="green radius font-share big" onclick="playerContent()" style="width: 200px;">
+        <button class="green radius font-share big" onclick="addManyPlayers()" style="width: 200px;">
           Jogar
         </button>
         <button class="text-grey-300 font-share full" onclick="openPage('views/config')">
