litle adjusts for screen many players

--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,8 @@
         <h3 include="views/logo"></h3>
         <br>
 
+        <p class="text-white">Digite o nome dos jogadores</p>
+
         <div id="input-players" class="padding">
           <div>
             <input type="text" placeholder="Jogador 1">
