--- a/www/index.html
+++ b/www/index.html
@@ -45,7 +45,7 @@
             </div>
           </div>
           <div class="align-right" id="add-player-input">
-            <button class="text-blue-300 font-share link-add-right" onclick="addPlayerInput()">
+            <button class="text-blue-300 font-share link-add-right" onclick="addPlayerInput(); return false;">
               Adicionar jogador
             </button>
           </div>
