feat: show winner

--- a/www/index.html
+++ b/www/index.html
@@ -150,11 +150,11 @@
     <div class="padding align-center font-share" style="font-size: 20px;">
       <i style="font-size: 40px;" class="icon ion-trophy text-amber"></i>
       <div class="space"></div>
-      <b style="font-size: 25px;">{{Nome}}</b>
+      <b style="font-size: 25px;" id="the-end-name"></b>
       <div class="space"></div>
       ganhou a partida com
       <div class="space"></div>
-      <span class="text-red font-titan" style="font-size: 35px;">0 pontos</span>
+      <span class="text-red font-titan" style="font-size: 35px;"><span id="the-end-points"></span> pontos</span>
       <div class="space-big"></div>
       <button class="green radius font-share" onclick="restartPoints(); closeAlert('alert-the-end-id');">Jogar novamente</button>
     </div>
