--- a/www/index.html
+++ b/www/index.html
@@ -156,7 +156,7 @@
       <div class="space"></div>
       <span class="text-red font-titan" style="font-size: 35px;"><span id="the-end-points"></span> pontos</span>
       <div class="space-big"></div>
-      <button class="green radius font-share" onclick="restartPoints(); closeAlert('alert-the-end-id');">Jogar novamente</button>
+      <button class="green radius font-share" onclick="playAgain()">Jogar novamente</button>
     </div>
   </div>
 
