adiciona autofocus no input do primeiro jogador

--- a/www/index.html
+++ b/www/index.html
@@ -38,7 +38,7 @@
         <form action="javascript:void(0)" onsubmit="addManyPlayers()">
           <div id="input-players" class="padding">
             <div>
-              <input type="text" placeholder="Jogador 1">
+              <input type="text" autofocus placeholder="Jogador 1">
             </div>
             <div>
               <input type="text" placeholder="Jogador 2">
